--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
     "firebase": "^4.2.0",
+    "firebase-tools": "^6.4.0",
+    "g": "^2.0.1",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
