--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^4.2.0",
     "firebase-tools": "^6.4.0",
     "g": "^2.0.1",
+    "ng2-validation": "^4.2.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
